--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+               "lodash"
+            ],
             "outputPath": "dist/clusterpteste",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -28,7 +31,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [ "./node_modules/jspdf/dist/jspdf.min.js" ]
           },
           "configurations": {
             "production": {
