--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@angular/router": "~10.2.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.3",
+    "html2canvas": "^1.0.0-rc.7",
     "json-server": "^0.16.2",
+    "jspdf": "^1.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^10.0.1",
     "@angular-devkit/build-angular": "~0.1002.0",
     "@angular/cli": "^10.2.1",
     "@angular/compiler-cli": "~10.2.0",
