--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "~10.2.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.3",
+    "core-js": "^3.8.2",
     "html2canvas": "^1.0.0-rc.7",
+    "html2pdf.js": "^0.9.0",
     "json-server": "^0.16.2",
     "jspdf": "^1.4.1",
     "rxjs": "~6.6.0",
